# opencv-get-started

./: CMakeLists.txt  CaptureVideo.cpp  CaptureWebcam.cpp  ChangeImage.cpp  CreateAndSaveImage.cpp  CreateImage.cpp  DisplayImage.cpp  FilterImage.cpp  README.md
